RESOLVED FIXED124012
[Mac] Crash at com.apple.WebCore: -[WebCoreAVFMovieObserver observeValueForKeyPath:ofObject:change:context:] + 2084
https://bugs.webkit.org/show_bug.cgi?id=124012
Summary [Mac] Crash at com.apple.WebCore: -[WebCoreAVFMovieObserver observeValueForKe...
Jer Noble
Reported 2013-11-07 13:36:06 PST
[Mac] Crash at com.apple.WebCore: -[WebCoreAVFMovieObserver observeValueForKeyPath:ofObject:change:context:] + 2084
Attachments
Patch (2.12 KB, patch)
2013-11-07 13:37 PST, Jer Noble
eric.carlson: review+
Jer Noble
Comment 1 2013-11-07 13:37:54 PST
Jer Noble
Comment 2 2013-11-07 13:41:24 PST
Note You need to log in before you can comment on or make changes to this bug.