[Mac] Crash at com.apple.WebCore: -[WebCoreAVFMovieObserver observeValueForKeyPath:ofObject:change:context:] + 2084 https://bugs.webkit.org/show_bug.cgi?id=124012

Reviewed by Eric Carlson.

The value of the 'duration' key is a NSConcreteValue wrapping a CMTime, not a NSNumber.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(-[WebCoreAVFMovieObserver observeValueForKeyPath:ofObject:change:context:]):

Canonical link: https://commits.webkit.org/142181@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158869 268f45cc-cd09-0410-ab3c-d52691b4dbfc